# balance_reporting

./: .gitignore  LICENSE  Procfile  README.md  app.py  config.py  functions.py  pyproject.toml  requirements.txt  setup.sh  test.ipynb
.streamlit/: config.toml  secrets.toml
.streamlit/data/test/: BMED_211130_231114.parquet  FLOWE_210625_231110.parquet
Dash/: dash_app.py  filters.py  graphics.py  main.py  report_account.py  requirements.txt  transform.py
Dash/assets/: style.css
Data/: abi.csv  config_template.json
Data/DataCristina/: Elenco_Movimenti(1).csv  config.json  fulldf.csv
Data/DataLuigi/: MovimentiCC_2021_08_14_1628963867083.xls  MovimentiCC_2021_08_14_1628963903078.xls  MovimentiCC_2021_08_14_1628963935126.xls  MovimentiCC_2021_08_14_1628963949912.xls  config.json  fulldf.csv
Extractor/: poorwebscraping.py  test.py
Streamlit/: functions.py
balance_reporting/: app.py  exceptions.py  file_manager.py  graphics.py  page_builders.py
balance_reporting/data_manager/: data_manager.py
balance_reporting/data_reader/: data_reader.py
src/: app.py  authentication.py  config.py  data_loader.py  data_manager.py  data_uploader.py  file_management.py  file_manager.py  functions.py  graphics.py  page_builders.py  style.css
windows scripts/: run.bat  setup.bat  update.bat
